helloworld-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  selector:
    app: helloworld
  ports:
  - name: helloworld-service-port
    protocol: TCP
    port: 80
    targetPort: 80
